# Kanjinetworks-Yomitan

./: .gitignore  README.md  kanjinetworks_to_yomitan.py  pyproject.toml
kanjinetworks_source/: .gitignore
kanjinetworks_source/kanjinetworks/: __init__.py  kanji.py
kanjinetworks_source/kanjinetworks/export/: japaneseapp.py
kanjinetworks_source/kanjinetworks/extract/: extractor.py  parser.py
kanjinetworks_source/scripts/: kn_to_ja.py
