[project]
name = "kanjinetworks-yomitan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kanjinetworks",
    "pdfminer.six>=20260107",
    "pypdf>=6.8.0",
]

[tool.uv.sources]
kanjinetworks = { path = "./kanjinetworks_source", editable = true }
